fix: resolve overlapping text on .work-box with bottom nav buttons

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -165,6 +165,7 @@
 }
 .work-box {
   padding: 80px;
+  padding-bottom: 150px;
   display: flex;
   flex-direction: column;
   width: 600px;
@@ -271,7 +272,7 @@
   }
   .work-box {
     padding-top: 40px;
-    padding-bottom: 40px;
+    padding-bottom: 130px;
   }
   .work-section h2 {
     font-size: 60px;
@@ -295,6 +296,7 @@
   .work-box {
     width: 450px;
     padding: 50px;
+    padding-bottom: 130px;
   }
   .work-flex {
     margin-left: -50px;
@@ -314,6 +316,7 @@
   .work-box {
     width: 350px;
     padding: 30px;
+    padding-bottom: 140px;
   }
   .work-flex {
     margin-left: -30px;
@@ -359,6 +362,7 @@
     gap: 20px;
     width: 320px;
     padding: 20px;
+    padding-bottom: 160px;
   }
   .work-flex {
     margin-left: -15px;
@@ -382,6 +386,7 @@
   .work-box {
     width: 85vw;
     padding: 15px;
+    padding-bottom: 180px;
   }
   .work-flex {
     margin-left: -10px;
